--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="title_add_audio">Add new audio</string>
     <string name="enter_name">Enter name</string>
     <string name="msg_empty_field">Field can not be empty</string>
+    <string name="title_add_group">Add new group</string>
 
 
 
