--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_audios">PET Play Audios</string>
     <string name="title_groups">PET Play Groups</string>
     <string name="touch_for_play">Touch for Play</string>
+    <string name="touch_for_select">Touch for Select</string>
     <string name="touch_for_remove">Touch for Remove</string>
     <string name="touch_for_include_audios">Touch for include audios</string>
     <string name="menu_play">Play</string>
