--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="btn_cancel">Cancel</string>
     <string name="title_add_audio">Add new audio</string>
     <string name="enter_name">Enter name</string>
+    <string name="enter_date_start">Start date\n</string>
+    <string name="enter_date_finish">End date\n</string>
+    <string name="enter_time_start">Start time\n</string>
+    <string name="enter_time_finish">End time\n</string>
     <string name="msg_empty_field">Field can not be empty</string>
     <string name="title_add_group">Add new group</string>
 
